Fixes collapsing flexbox

--- a/source/stylesheets/05-organisms/_global.scss
+++ b/source/stylesheets/05-organisms/_global.scss
@@ -25,4 +25,5 @@
 .footerMain {
   @extend %flexboxLayout--nav;
   border-top: 1px solid $gray--light;
+  flex-shrink: 0;
 }
